# Define the workspace base name and a managed directory by bazel
# that will hold the node_modules called @npm
workspace(
  name = "kibana",
  managed_directories = {"@npm": ["node_modules"]},
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Fetch Node.js rules
http_archive(
  name = "build_bazel_rules_nodejs",
  sha256 = "e79c08a488cc5ac40981987d862c7320cee8741122a2649e9b08e850b6f20442",
  urls = ["https://github.com/bazelbuild/rules_nodejs/releases/download/3.8.0/rules_nodejs-3.8.0.tar.gz"],
)

# Now that we have the rules let's import from them to complete the work
load("@build_bazel_rules_nodejs//:index.bzl", "check_rules_nodejs_version", "node_repositories", "yarn_install")

# Assure we have at least a given rules_nodejs version
check_rules_nodejs_version(minimum_version_string = "3.8.0")

# Setup the Node.js toolchain for the architectures we want to support
#
# NOTE: darwin-arm64 is not being installed because bazel is not yet available on that architecture.
# The PR for it was merged and should be available in the next release of bazel and bazelisk. As soon as they have it
# we can update that rule.
node_repositories(
  node_repositories = {
    "16.7.0-darwin_amd64": ("node-v16.7.0-darwin-x64.tar.gz", "node-v16.7.0-darwin-x64", "c9bf23c765c584f635a4065d58dadff9737aeb605676d1e45873eba66adaab8a "),
    "16.7.0-darwin_arm64": ("node-v16.7.0-darwin_arm64.zip", "node-v16.7.0-darwin_arm64", "969875c1a6b2790663d7b25d7641d1e3919225659921a98d2f1e4711bbec5ef3"),
    "16.7.0-linux_arm64": ("node-v16.7.0-linux-arm64.tar.xz", "node-v16.7.0-linux-arm64", "28775e7d1463052e748d69b145b845e28361c467cabc42dc887003484b6a4ef1"),
    "16.7.0-linux_s390x": ("node-v16.7.0-linux-s390x.tar.xz", "node-v16.7.0-linux-s390x", "51a3acd86d52da8418400a451f4eca615ae023d17866b018e9e2f02cb1f03286"),
    "16.7.0-linux_amd64": ("node-v16.7.0-linux-x64.tar.xz", "node-v16.7.0-linux-x64", "32f1563b8bab10981164dfc63a38ab303db6b54e888d5ac4190b4b6777184daf"),
    "16.7.0-windows_amd64": ("node-v16.7.0-win-x64.zip", "node-v16.7.0-win-x64", "32f1563b8bab10981164dfc63a38ab303db6b54e888d5ac4190b4b6777184daf"),
  },
  node_version = "16.7.0",
  node_urls = [
    "https://nodejs.org/dist/v{version}/{filename}",
  ],
  yarn_repositories = {
    "1.21.1": ("yarn-v1.21.1.tar.gz", "yarn-v1.21.1", "d1d9f4a0f16f5ed484e814afeb98f39b82d4728c6c8beaafb5abc99c02db6674"),
  },
  yarn_version = "1.21.1",
  yarn_urls = [
    "https://github.com/yarnpkg/yarn/releases/download/v{version}/{filename}",
  ],
  package_json = ["//:package.json"],
)

# Run yarn_install rule to take care of dependencies
#
# NOTE: FORCE_COLOR env var forces colors on non tty mode
yarn_install(
  name = "npm",
  package_json = "//:package.json",
  yarn_lock = "//:yarn.lock",
  data = [
    "//:.yarnrc",
    "//:preinstall_check.js",
    "//:node_modules/.yarn-integrity",
  ],
  exports_directories_only = True,
  symlink_node_modules = True,
  quiet = False,
  frozen_lockfile = False,
)
